--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: 首页
 author:
   name: t
   email: l143983793@163.com
-description: > 描述
+description: 描述
 show_excerpts: true
 theme: minima
 minima:
