--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,8 @@ show_excerpts: false
 theme: minima
 minima:
   date_format: "%Y-%d-%m"
-  social_links: github:  clwgit
+  social_links:
+    github: clwgit
 plugins:
  - jekyll-feed
  - jekyll-seo-tag
